apps/kratos/overlays/nishir/patch-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos
  namespace: shikanime
spec:
  template:
    spec:
      containers:
      - name: kratos
