apps/kratos/overlays/nishir/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kratos
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kratos
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: accounts
      ports:
        - port: http
        - port: http-admin
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kratos-postgres
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kratos-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: kratos
      ports:
        - port: postgres
